fix : font-size about collapse; add : dynamic date footer

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,6 +1,5 @@
 .card {
     display: grid;
-    width: 340px;
     height: 340px;
     border-radius: 10px;
     overflow: hidden;
