--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -31,7 +31,7 @@
       background-color: #f6f6f6;
       color: #000;
       padding: 1rem;
-      font-size: 14px;
+      font-size: 18px;
       line-height: 1.4;
     }
   }
